[package]
name = "robswebhub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
config = "0.13.3"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
serde-aux = "4"
actix-files = "0.6.2"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
uuid = { version = "1.3.2", features = ["serde", "v4"] }
anyhow = "1.0.71"
plotters = { version = "0.3.5", features = ["datetime"] }
itertools = "0.11.0"
chrono = "0.4.26"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]
